# rss-reader

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docker.env  init_db.sh  local.env  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 021a30a6a780_initial_migration.py  4f538fbb2d39_initial_migration.py  5f32fdb6cc65_initial_migration.py  8c8debaaea71_initial_migration.py  e5c1f7deba62_initial_migration.py
app/: initialize_db.py  main.py  workers.py
app/api/v1/: __init__.py  endpoints.py  endpoints_auth.py  exceptions.py
app/api/v1/resources/: auth.py  base.py  list_posts.py  read_unread.py  refresh_feed.py  subscription.py
app/core/: config.py  security.py
app/crud/: crud_user.py  feed.py  post.py  user_feed.py  user_post.py
app/db/: base.py
app/models/: __init__.py  feed.py  post.py  user.py
app/readers/: base_reader.py  exceptions.py  helpers.py
app/schemas/: feed.py  post.py  user.py
app/tests/: conftest.py  test_api.py
app/tests/api/v1/: conftest.py  test_endpoints.py  test_follow_feeds.py  test_list_posts.py  test_read_posts.py  test_refresh_feed.py  test_unfollow_feeds.py  test_unread_posts.py
app/utils/: reader.py
app/worker/: celery.py  tasks.py
rss_reader/: main.py
rss_reader/core/: config.py  security.py
rss_reader/crud/: crud_user.py
rss_reader/db/: base.py  session.py
rss_reader/models/: item.py  user.py
rss_reader/sql_app/: database.py
rss_reader/tests/: conftest.py  test_api.py
rss_reader/utils/: reader.py
